Update dummy index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>tank-beyond-repair</title>
 </head>
 <body>
-    Play <a href="client-dist">here</a>
+    <p>
+        
+        Play <a href="client-dist">here</a>
+    </p>
+    <p>
+        For more info: <a href="https://github.com/vicksonzero/tank-beyond-repair">https://github.com/vicksonzero/tank-beyond-repair</a>
+    </p>
 </body>
 </html>
