Move folder structure for client-only architecture

--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>tank-beyond-repair</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <p>
-        
-        Play <a href="client-dist">here</a>
-    </p>
-    <p>
-        For more info: <a href="https://github.com/vicksonzero/tank-beyond-repair">https://github.com/vicksonzero/tank-beyond-repair</a>
-    </p>
+    
+    <script src="./client-dist/bundle.js"></script>
 </body>
 </html>
